# Max-Payne

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
maxpayne/: README.md  __init__.py  pyproject.toml
maxpayne/checks/: __init__.py  git_check.py  ports_check.py  python_check.py  windows_check.py
maxpayne/core/: __init__.py
maxpayne/maxpayne/: cli.py  explain.py  heal.py
maxpayne/maxpayne/checks/: docker_check.py  env_check.py  git_check.py  node_check.py  ollama_check.py  ports_check.py  python_check.py
maxpayne/maxpayne/core/: __init__.py  result.py  runner.py  system.py
maxpayne/maxpayne/ui/: __init__.py  console.py
maxpayne/tests/: test_cli_heal_explain.py  test_explain.py  test_heal.py  test_result.py  test_runner.py
tests/: test_cli_integration.py  test_system.py  test_windows_checks.py
